src/objects/PBS_Wiki__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Used to display PlanCraft Wiki Articles for phase 1 of the PlanCraft project</description>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Used to store Group Name for referencing in Wiki VF pages</description>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Files2__c</fullName>
        <label>Related Files2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Related_Files3__c</fullName>
        <label>Related Files3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Related_Files4__c</fullName>
        <label>Related Files4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Wiki_Content__c</fullName>
        <description>Used to store the main body of the Wiki content</description>
        <label>Wiki Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>PBS Wiki</label>
    <pluralLabel>PBS Wiki</pluralLabel>
</CustomObject>